link naar stylesheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Early Warning Scan</title>
+  <title>Early Warning Scan</title>
+  <link type="text/css" rel="stylesheet" href="style.css"/>
+
 </head>
 <body>
 
