width QR code limited

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <p>Zoek je nog een onderwerp voor een PWS volgend jaar (of het jaar erna), ook al een super goede reden om mee te doen.</p> 
   <p>Hou je van tekenen of het schrijven van wervende tekst? Ook dat soort vaardigheden zijn nodig om een goed idee werkelijkheid te laten worden.</p>
   <p>Kortom: geef je op via het formulier achter de QR-code </p>  
-    <a href="https://forms.office.com/e/9QNGDnyuZN"><img src="QRCodeEarlyWarningScanDSMactiviteit.png" alt="QR-code voor opgave 30 november" caption="https://forms.office.com/e/9QNGDnyuZN"></a>a>
+    <a href="https://forms.office.com/e/9QNGDnyuZN"><img width = "400px" src="QRCodeEarlyWarningScanDSMactiviteit.png" alt="QR-code voor opgave 30 november" caption="https://forms.office.com/e/9QNGDnyuZN"></a>a>
 </body>
 </html>
