--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
   <p>Op dit moment wordt borstkanker opgespoord met een test die heel vervelend is voor vrouwen, niet werkt voor vrouwen onder 50 en regelmatig de verkeerde diagnose stelt. Er overlijen in Nederland gemiddeld twee jonge vrouwen per dag aan de gevolgen van borstkanker. Dat aantal kan heel naar beneden als er betrouwbare, makkelijke test zou zijn die jonge vrouwen op prettige manier de kans geeft zich regelmatig te laten controleren.</p>
   <p>Tom Sanders zal voor iedereen begrijpelijk uitleggen hoe de Early Warning Scan werkt. Hij zal ook uitleggen welke problemen hij is tegengekomen nadat het idee was uitgewerkt.</p>
 <h2>Programma</h2>  
-  <ol>
-    <li>Voordracht Ton Sanders</li>
-    <li>Aan de slag!</li>
+    <h3>14:30 Voordracht Ton Sanders</h3>
+    <h3>15:15 Aan de slag!</h3>
     In groepjes kiezen jullie een van de aspecten die in praatje aan de orde zijn gekomen. In minder dan en uur gaan jullie brainstormen over hoe dat aangepakt kan worden en jullie maken er daar een poster van.
-    <li>Presentatie resultaten</li>
+    <h3>16:30 Presentatie resultaten</h3>
     Samen met Tom lopen we langs alle posters.
-  </ol>
   <p>Het programma start om 14:30 en duur tot even na vijf uur. Heb jij het zesde uur een gewone les, dan kan daar vrijstelling voor gevraagd worden. Ook een eventueel KWT tijdens 7e uur vervalt als nodig.</p>
 
 <h2>Waarom meedoen?</h2>
@@ -31,6 +29,8 @@
   <p>Zoek je nog een onderwerp voor een PWS volgend jaar (of het jaar erna), ook al een super goede reden om mee te doen.</p> 
   <p>Hou je van tekenen of het schrijven van wervende tekst? Ook dat soort vaardigheden zijn nodig om een goed idee werkelijkheid te laten worden.</p>
   <p>Kortom: geef je op via het formulier achter de QR-code </p>  
-    <a href="https://forms.office.com/e/9QNGDnyuZN"><img width = "400px" src="QRCodeEarlyWarningScanDSMactiviteit.png" alt="QR-code voor opgave 30 november" caption="https://forms.office.com/e/9QNGDnyuZN"></a>a>
+    <a href="https://forms.office.com/e/9QNGDnyuZN">
+      <img width = "200px" src="QRCodeEarlyWarningScanDSMactiviteit.png" alt="QR-code voor opgave 30 november" caption="https://forms.office.com/e/9QNGDnyuZN">
+    </a>
 </body>
 </html>
