--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <h3>DSM Special Event</h3>
 
 <h2>Waar gaat dit over?</h2>  
-  <p>We hebben een gastspreker uitgenodigd die al enkele jaren zeer intensief bezig is met het ontwikkelen van een opsporingsmethode voor borstkanker. Dat heeft medische en technische aspecten, maar in de praktijk blijken er heel meer vraagstukken naar boven te komen (macht, cultuur, gender, haalbaarheid, …).</p>
-  <p>Op dit moment wordt borstkanker opgespoord met een test die heel vervelend is voor vrouwen, niet werkt voor vrouwen onder 50 en regelmatig de verkeerde diagnose stelt. Er overlijen in Nederland gemiddeld twee jonge vrouwen per dag aan de gevolgen van borstkanker. Dat aantal kan heel naar beneden als er betrouwbare, makkelijke test zou zijn die jonge vrouwen op prettige manier de kans geeft zich regelmatig te laten controleren.</p>
-  <p>Tom Sanders zal voor iedereen begrijpelijk uitleggen hoe de Early Warning Scan werkt. Hij zal ook uitleggen welke problemen hij is tegengekomen nadat het idee was uitgewerkt.</p>
+  <p>We hebben een gastspreker uitgenodigd die al enkele jaren zeer intensief bezig is met het ontwikkelen van een opsporingsmethode voor borstkanker. Dat heeft medische en technische aspecten, maar in de praktijk blijken er veel meer vraagstukken naar boven te komen (macht, cultuur, gender, haalbaarheid, …).</p>
+  <p>Op dit moment wordt borstkanker opgespoord met een test die heel vervelend is voor vrouwen, niet werkt voor vrouwen onder 50 en regelmatig de verkeerde diagnose stelt. Dagelijks overlijden er in Nederland gemiddeld twee jonge vrouwen aan de gevolgen van borstkanker. Dat aantal kan heel ver naar beneden als er betrouwbare, makkelijke test zou zijn die jonge vrouwen op prettige manier de kans geeft zich regelmatig te laten controleren.</p>
+  <p>Tom Sanders denkt dat hij met de Early Warning Scan het benodigde scaninstrument heeft bedacht! Hij zal dat uitleggen ook aandacht geven aan problemen die hij is tegengekomen nadat het idee was uitgewerkt.</p>
 <h2>Programma</h2>  
     <h3>14:30 Voordracht Ton Sanders</h3>
     <h3>15:15 Aan de slag!</h3>
-    In groepjes kiezen jullie een van de aspecten die in praatje aan de orde zijn gekomen. In minder dan en uur gaan jullie brainstormen over hoe dat aangepakt kan worden en jullie maken er daar een poster van.
+    In groepjes kiezen jullie een van de aspecten die in praatje aan de orde zijn gekomen. In minder dan en uur gaan jullie brainstormen over hoe dat aangepakt kan worden en jullie maken daar een poster van.
     <h3>16:30 Presentatie resultaten</h3>
     Samen met Tom lopen we langs alle posters.
   <p>Het programma start om 14:30 en duur tot even na vijf uur. Heb jij het zesde uur een gewone les, dan kan daar vrijstelling voor gevraagd worden. Ook een eventueel KWT tijdens 7e uur vervalt als nodig.</p>
